--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,8 +1,8 @@
 // http://ionicframework.com/docs/v2/theming/
 
 img {	
-	transition: all 0.3s;
-	-webkit-transition: all 0.3s;
+	transition: all 0.5s;
+	-webkit-transition: all 0.5s;
 	position: relative;
 	left: 0;
 	top: 0;
@@ -24,6 +24,14 @@ ion-card {
 	-webkit-transition: all 0.3s;
 	transform: scaleX(1.07);
 	-webkit-transform: scaleX(1.07);
+}
+
+.focus-circle {
+	position: fixed;
+	z-index: 1;
+	padding: 50px;
+	border: 550px solid rgba(199,155,255,.66);
+	border-radius: 50%;
 }
 
 // App Global Sass
