--- a/src/components/my-map-inner/my-map-inner.html
+++ b/src/components/my-map-inner/my-map-inner.html
@@ -1,11 +1,11 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>小學數學地圖</ion-title>
-  </ion-navbar>
-</ion-header>
+<!--
+  Generated template for the MyMapInner component.
 
-<ion-content>
-  <div class="focus-circle"
+  See https://angular.io/docs/ts/latest/api/core/index/ComponentMetadata-class.html
+  for more info on Angular 2 Components.
+-->
+
+<div class="focus-circle"
   [ngStyle]="{'top': myTop+'px', 'left': myLeft+'px'}"
   [hidden]="!isStrong"
   (tap)="circleTapEvent($event)"
@@ -21,5 +21,4 @@
              [src]="'http://math.alearn.org.tw/%E5%AD%B8%E7%BF%92%E5%9C%B0%E5%9C%96/%E5%B0%8F%E5%AD%B8%E6%95%B8%E5%AD%B8%E5%9C%B0%E5%9C%96/p' + n + '.jpg'"/>
       </ion-item>
     </ion-card>
-  </ion-list>
-</ion-content>
+ </ion-list>
