remove unused pinch event

--- a/src/components/my-map-inner/my-map-inner.html
+++ b/src/components/my-map-inner/my-map-inner.html
@@ -9,8 +9,7 @@
   [ngStyle]="{'top': myTop+'px', 'left': myLeft+'px'}"
   [hidden]="!isStrong"
   (tap)="circleTapEvent($event)"
-  (press)="pressEvent($event,n)"
-  (pinch)="pinchEvent($event,n)"></div>
+  (press)="pressEvent($event,n)"></div>
   <ion-list inset>
     <ion-card *ngFor = "let n of [0,1,2,3,4,5]; let i = index"
     (tap)="tapEvent($event,n)"
